mi8937: Boot up ADSP automatically on boot
Change-Id: I5a85a9307f33d489a40dd0ced8c5a2be261a2d1a

--- a/recovery/root/init.recovery.device.rc
+++ b/recovery/root/init.recovery.device.rc
@@ -1,3 +1,11 @@
+# ADSP
+on boot
+    mkdir /firmware
+    mount vfat /dev/block/bootdevice/by-name/modem /firmware ro
+    write /sys/kernel/boot_adsp/boot 1
+    exec u:r:recovery:s0 -- /system/bin/sleep 3s
+    setprop adsp.boot 1
+
 # Determine device
 on init
     exec u:r:recovery:s0 -- /system/bin/determine-device.sh
