mi8937: Don't delay after triggering ADSP to boot
* Breaks Decryption
* Audio still works after removing it
* Move it to post-fs stage, to ensure ADSP is still ready before use

Change-Id: I8533af2656e4c70cec30d037bbbe32f13fecd589

--- a/recovery/root/init.recovery.device.rc
+++ b/recovery/root/init.recovery.device.rc
@@ -1,9 +1,10 @@
 # ADSP
-on boot
+on post-fs
     mkdir /firmware
     mount vfat /dev/block/bootdevice/by-name/modem /firmware ro
     write /sys/kernel/boot_adsp/boot 1
-    exec u:r:recovery:s0 -- /system/bin/sleep 3s
+
+on boot
     setprop adsp.boot 1
 
 # Audio
