--- a/recovery/root/init.recovery.device.rc
+++ b/recovery/root/init.recovery.device.rc
@@ -1,7 +1,7 @@
 # ADSP
 on post-fs
     mkdir /firmware
-    mount vfat /dev/block/bootdevice/by-name/modem /firmware ro
+    mount ext4 /dev/block/bootdevice/by-name/modem /firmware ro
     write /sys/kernel/boot_adsp/boot 1
 
 on boot
